Added good reconstruction for all of the grabs and saved them in pickles

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ opencv-python>=4.5.0
 matplotlib>=3.4.0
 scipy>=1.7.0
 tqdm>=4.62.0
-ipykernel>=6.0.0  # for Jupyter notebook support 
+ipykernel>=6.0.0  # for Jupyter notebook support
+open3d>=0.17.0  # For mesh generation
+trimesh>=4.0.0  # For mesh processing and visualization 
